--- a/templates/Back/administrateur/index.html.twig
+++ b/templates/Back/administrateur/index.html.twig
@@ -2,44 +2,64 @@
 
 
 {% block main %}
+<div class="row" style="margin-left: 2px; margin-right: 2px;">
+		<div class="card flex-fill">
+        			<div class="card-header">
+                    				<h2 style="font-weight: bold; color: #2f64b1; text-align: center;">Liste des Administrateurs</h2>
+			</div>
 
-<table>
+
+
+			<table class="table table-hover my-0" >
+            				<thead>
+
 <tr>
 <th>Nom</th>
-<th>Prenom</th>
+					<th class="d-none d-xl-table-cell">Prénom</th>
+                    					<th class="d-none d-xl-table-cell">Role</th>
+
+		<th class="d-none d-md-table-cell">Adresse Email</th>
 
 <th>Numéro Téléphone</th>
-<th>Adresse mail</th>
 
-<th>image</th>
-<th>role</th>
+					<th class="d-none d-md-table-cell">Image</th>
 
 
-<th></th>
-<th></th>
+					<th class="d-none d-md-table-cell">Actions</th>
 </tr>
+				</thead>
+                				<tbody>
+
+
 {%  for admin in list %}
 <tr>
 <td>{{admin.personne.getNomPersonne()}}</td>
 <td>{{admin.personne.getPrenomPersonne()}}</td>
-
-<td>{{admin.personne.getNumeroTelephone()}}</td>
+<td>{{admin.role}}</td>
 <td>{{admin.personne.getMailPersonne()}}</td>
 
-<td>{{admin.personne.getImagePersonne()}}</td>
-<td>{{admin.role}}</td>
+<td>{{admin.personne.getNumeroTelephone()}}</td>
+
+<td>
+						<img src="{{ asset('img/image_compte/' ~ admin.personne.getImagePersonne()) }}" alt="{{ admin.personne.getNomPersonne() }}" width="50" height="50">
+
+</td>
+
 
 
 <td>
-                    <a href="{{path('app_administrateur_edit', {id:admin.personne.getId()})}}">edit</a>
+                    <a href="{{path('app_administrateur_edit', {id:admin.personne.getId()})}}"><span class="icon">✏️</span> </a>
                     
-                </td>
-                <td>
-                    <a href="{{path('app_administrateur_delete', {id:admin.personne.getId()})}}">Delete</a>
+          
+              
+                    <a href="{{path('app_administrateur_delete', {id:admin.personne.getId()})}}"><span class="icon">🗑️</span></a>
 </tr>
 {% endfor %}
-</table>
-                <a href="{{path('app_administrateur_add')}}">Ajouter Admin</a>
+				</tbody>
+			</table>
+		</div>
+</div>
+                <a href="{{path('app_administrateur_add')}}"  class="btn-primary">Ajouter Admin</a>
 
 
 {% endblock %}
