--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -4,17 +4,25 @@
 {% block section %}
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section">
+<section id="hero" class="hero section">
 
-      <img src="{{ asset('img/background.png') }}" alt="" data-aos="fade-in">
+  <img src="{{ asset('img/background.png') }}" alt="" data-aos="fade-in">
 
-      <div class="container">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">Dynamiser le présent,<br>Innover pour demain</h2>
-        <p data-aos="fade-up" data-aos-delay="200">Bienvenue sur e-City, votre destination intelligente où la vie devient plus facile grâce à une gamme complète de services pour vos besoins quotidiens.</p>
-        <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a <a href="{{ path ('app_client_signUp')}}" class="btn-get-started">Démarré Maintenant</a>
-        </div>
-      </div>
+ <div class="container">
+  <div class="row align-items-center">
+    <div class="col-md-3 col-6"> <!-- Colonne pour le logo, utilise col-md-3 pour les écrans moyens et grands, col-6 pour les écrans plus petits -->
+      <img src="{{ asset('img/logo2.png') }}" class="img-fluid" alt="Logo" style="max-width: 200px;"> <!-- Ajout d'un style pour définir la largeur maximale du logo -->
+    </div>
+    <div class="col-md-9 col-6"> <!-- Colonne pour le texte, utilise col-md-9 pour les écrans moyens et grands, col-6 pour les écrans plus petits -->
+      <h2 data-aos="fade-up" data-aos-delay="100">E-City,<h4> Dynamiser le présent,<br>Innover pour demain</h4></h2>
+        <p data-aos="fade-up" data-aos-delay="200" >Bienvenue sur e-City, votre destination intelligente où la vie devient plus facile grâce à une gamme complète de services pour vos besoins quotidiens.</p>
+      <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
+          <a <a href="{{ path ('app_client_signUp')}}" class="btn-get-started">Commencer</a>
+          </div>
+    </div>
+  </div>
+</div>
+</section><!-- /Section d'accueil -->
 {% endblock %}
 {% block section2 %}
 <!-- Section À Propos -->
