--- a/templates/Front/signUp.html.twig
+++ b/templates/Front/signUp.html.twig
@@ -1,9 +1,10 @@
-
 <link href="css/app.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <title>{% block title %}E-city{% endblock %}</title>
 
   <link href="{{ asset ('img/icone.png') }}" rel="icon">
+  
+
 {% block section %}
 
 	
@@ -13,7 +14,7 @@
 				<div class="col-sm-10 col-md-8 col-lg-6 mx-auto d-table h-100">
 					<div class="d-table-cell align-middle">
 
-		<div class="text-center mt-4">
+						<div class="text-center mt-4">
 	<a href="{{ path ('app_acceuil')}}">
 		<h1 style="color: #37423b; font-size: 35px;">
 			<strong>E-CITY</strong>
@@ -76,21 +77,27 @@
 
 
 										</div>
-										<div class="text-center mt-3">
+<div class="d-flex justify-content-center">
         {{ form_widget(form_client.Submit, {'label': 'S\'inscrire', 'attr': {'class': 'btn btn-lg btn-primary'}}) }}
 
-										</div>
-										<div style="text-align: center;">
-										 <small>
 
-			   <a href="{{ path('app_client_signIn') }}">Vous avez deja un compte?</a>
-</small>
-</div>
 								</div>
 							</div>
 						</div>
 
 					</div>
+					<div class="card">
+                     <div >
+                        <div class="m-sm-4">
+                        
+                          
+                           <div style="text-align: center;">
+                              Vous avez déja un compte? <a href="{{ path ('app_client_signIn')}}">Se connecter</a>
+                             
+                           </div>
+                        </div>
+						
+                     </div>
 				</div>
 			</div>
 		</div>
