last version before search and tri

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,8 @@
   --default-color-rgb: 68, 68, 68;
   --heading-color: #37423b;
   --heading-color-rgb: 55, 66, 59;
-  --accent-color: #5fcf80;
+  --accent-color: ##57C0DD;
+  ;
   --accent-color-rgb: 95, 207, 128;
   --contrast-color: #ffffff;
   --contrast-color-rgb: 255, 255, 255;
@@ -34,9 +35,11 @@
 /* Nav Menu Colors */
 :root {
   --nav-color: #272828;
-  --nav-hover-color: #5fcf80;
+  --nav-hover-color: ##57C0DD;
+  ;
   --nav-dropdown-color: #272828;
-  --nav-dropdown-hover-color: #5fcf80;
+  --nav-dropdown-hover-color: ##57C0DD;
+;
   --nav-dropdown-background-color: #ffffff;
 }
 
