--- a/templates/Back/medecin/showDoctors.html.twig
+++ b/templates/Back/medecin/showDoctors.html.twig
@@ -11,6 +11,27 @@
         margin-left: 20px;
     }
 </style>
+    <form action="{{ path('app_medecins_search') }}" method="GET">
+        <input type="text" id="query" name="query">
+        <button type="submit">Search</button>
+    </form>
+    {# ------------------------- #}
+      <form action="{{ path('app_medecins_tri') }}" method="GET">
+        <label for="order">Ordre :</label>
+        <select name="order" id="order">
+            <option value="asc">Croissant</option>
+            <option value="desc">Décroissant</option>
+        </select>
+
+        <label for="field">Champ de tri :</label>
+        <select name="field" id="field">
+            <option value="nom medecin">nom medecin</option>
+          {# <option value="date">Date</option> #}
+            <!-- Ajoutez d'autres options pour les champs de tri si nécessaire -->
+        </select>
+
+        <button type="submit" class="btn btn-primary">Trier</button>
+    </form>
 
     <table class="table table-striped table-middle-aligned table-borderless" >
         <thead>
@@ -56,6 +77,7 @@
      <a href="{{ path('app_medecin_add') }}" class="btn btn-sm btn-primary">
     <i class="fa fa-edit" aria-hidden="true"></i> {{ 'Ajouter Medecin'|trans }}
         </a>
+        
     {# pagination----------------------------------- #}
     <div class="container py-5">
   <div class="d-flex justify-content-center">
