--- a/templates/Back/rendezVous/addRendezVousBack.html.twig
+++ b/templates/Back/rendezVous/addRendezVousBack.html.twig
@@ -1,7 +1,44 @@
 {% extends 'Back/base.html.twig' %}
-{# templates/task/new.html.twig #}
+
 {% block main %}
-<div style="display: flex; align-items: center;">
+{# {{dump(data)}} #}
+{# calendar #}
+ <script src='https://cdn.jsdelivr.net/npm/fullcalendar/index.global.min.js'></script>
+<script>
+
+      document.addEventListener('DOMContentLoaded', function() {
+        const calendarEl = document.getElementById('calendrier')
+        const calendar = new FullCalendar.Calendar(calendarEl, {
+          initialView: 'dayGridMonth',
+           headerToolbar: {
+                start: 'prev,next today',
+                center: 'title',
+                end: 'dayGridMonth,timeGridWeek'
+            },
+          events: {{ data|raw }},
+          editable: true,
+          eventResizableFromStart: true
+        })
+
+        calendar.on('eventChange', (e) => {
+            let url = `/api/${e.event.id}/edit`
+            let donnees = {
+                "id" : e.event.id,
+                "title": e.event.title,
+                "start": e.event.start,
+                "end": e.event.end,
+            }
+            
+            let xhr = new XMLHttpRequest
+
+            xhr.open("PUT", url)
+            xhr.send(JSON.stringify(donnees))
+        })
+        calendar.render()
+      })
+    </script>
+
+    <div style="display: flex; align-items: center;">
     <div style="margin-right: 159px;">
     {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'style': 'margin: 90px;'}}) }}
     <table>
@@ -47,6 +84,20 @@ $specialiteMedecin.change(function() {
 });
 </script>
     </div>
-    <img src="{{ asset('img/imgGM/rendezVous.png') }}" alt="Image Description" style="width: 500px; height: auto;">
+    <img src="{{ asset('img/imgGM/rendezVous.png') }}" alt="Image Description" style="width: 400px; height: auto;">
 </div>
+
+<div id="calendrier">
+</div>
+
+
+{% endblock %}
+{% block stylesheets %}
+    <style>
+        #calendrier{
+            margin-top : 10px;
+            width: 60%;
+            margin: auto;
+        }
+    </style>
 {% endblock %}
