--- a/templates/Back/rendezVous/showAllRvInOtherForm.html.twig
+++ b/templates/Back/rendezVous/showAllRvInOtherForm.html.twig
@@ -2,7 +2,27 @@
 
 {% block main %}
     <h1>{{ 'List de tous les rendez-vous'|trans }}</h1>
+<form action="{{ path('app_medecins_search') }}" method="GET">
+        <input type="text" id="query" name="query">
+        <button type="submit">Search</button>
+    </form>
+    {# ------------------------- #}
+      <form action="{{ path('app_rv_tri') }}" method="GET">
+        <label for="order">Ordre :</label>
+        <select name="order" id="order">
+            <option value="asc">Croissant</option>
+            <option value="desc">Décroissant</option>
+        </select>
 
+        <label for="field">Champ de tri :</label>
+        <select name="field" id="field">
+            <option value="nom medecin">nom medecin</option>
+          {# <option value="date">Date</option> #}
+            <!-- Ajoutez d'autres options pour les champs de tri si nécessaire -->
+        </select>
+
+        <button type="submit" class="btn btn-primary">Trier</button>
+    </form>
     <div class="appointments-grid">
         {% for rv in lesRVdeClient %}
             <div class="appointment-item">
